fixed the overflow problem

--- a/common.css
+++ b/common.css
@@ -101,6 +101,7 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
